Hide loading bar on iOS. :hover fix for iOS

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,6 +1,6 @@
 /* ==========================================================================
 	 Sass stuff
-	 ========================================================================== */
+========================================================================== */
 
  // Bootstrap
  @import "bootstrap/bootstrap";
@@ -84,7 +84,7 @@ $logo-xs: '<svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.
 
 /* ==========================================================================
 	 normalize.css v3.0.3 | MIT License | git.io/normalize | (minified)
-	 ========================================================================== */
+========================================================================== */
 
 html {
 	font-family: sans-serif;
@@ -281,7 +281,7 @@ td, th {
 
 /* ==========================================================================
 	 General - Setting up some base styles
-	 ========================================================================== */
+========================================================================== */
 
 html {
 	height: 100%;
@@ -393,7 +393,6 @@ p, ul, ol, dl {
 	-webkit-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
 	-moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
 	-o-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
-	margin: 0 0 1.75em 0;
 	text-rendering: geometricPrecision;
 }
 
@@ -671,7 +670,7 @@ button {
 
 /* ==========================================================================
 	 Utilities - These things get used a lot
-	 ========================================================================== */
+========================================================================== */
 
 /* Clears shit */
 
@@ -698,7 +697,7 @@ button {
 
 /* ==========================================================================
 	 General - The main styles for the the theme
-	 ========================================================================== */
+========================================================================== */
 
 .container {
 	margin-top: 100px;
@@ -757,7 +756,7 @@ button {
 }
 
 .logo {
-	&:active, &:hover {
+	&:active, &:hover, &:focus {
 		background-color: #f00;
 	}
 }
@@ -906,7 +905,7 @@ body {
 
 /* ==========================================================================
 	 Single Post - When you click on an individual post
-	 ========================================================================== */
+========================================================================== */
 
 .page-description {
     color: #ccc;
@@ -978,7 +977,7 @@ body {
 
 /* ==========================================================================
 	 Third Party Elements - Embeds from other services
-	 ========================================================================== */
+========================================================================== */
 
 /* Github */
 
@@ -1004,7 +1003,7 @@ body {
 
 /* ==========================================================================
 	 Pagination - Tools to let you flick between pages
-	 ========================================================================== */
+========================================================================== */
 
 /* The main wrapper for our pagination links */
 
@@ -1085,7 +1084,7 @@ body {
 
 /* ==========================================================================
 	 Subscribe - Generate those email subscribers
-	 ========================================================================== */
+========================================================================== */
 
 .gh-subscribe {
 	border: #e7eef2 1px solid;
@@ -1139,7 +1138,7 @@ body {
 
 /* ==========================================================================
 	 Footer - The bottom of every page
-	 ========================================================================== */
+========================================================================== */
 
 .site-footer {
 	position: relative;
@@ -1158,7 +1157,7 @@ body {
 
 /* ==========================================================================
 	 Media Queries - Smaller than 1399px
-	 ========================================================================== */
+========================================================================== */
 
 @media only screen and (max-width: 1399px) {
 	.container {
@@ -1168,7 +1167,7 @@ body {
 
 /* ==========================================================================
 	 Media Queries - Smaller than 991px
-	 ========================================================================== */
+========================================================================== */
 
 @media only screen and (max-width: 991px) {
 	blockquote {
@@ -1256,7 +1255,7 @@ body {
 
 /* ==========================================================================
 	 Media Queries - Smaller than 575px
-	 ========================================================================== */
+========================================================================== */
 
 @media only screen and (max-width: 575px) {
 	.container {
@@ -1423,7 +1422,7 @@ body {
 
 /* ==========================================================================
 	 Animations
-	 ========================================================================== */
+========================================================================== */
 
 /* Used to fade in title/desc on the home page */
 @-webkit-keyframes fade-in-down {
@@ -1496,4 +1495,4 @@ body {
 /* ==========================================================================
 	 End of file. Animations should be the last thing here. Do not add stuff
 	 below this point, or it will probably fuck everything up.
-	 ========================================================================== */
+========================================================================== */
